--- a/templates/task-progress-question-list.html
+++ b/templates/task-progress-question-list.html
@@ -1,6 +1,6 @@
 {% for q in context %}
   <li id="link-to-question-{{q.key}}" class="{% if q.is_this_question %}this{% else %}other{% endif %}">
-    {% if not q.is_this_question and q.can_link %}<a href="{{task.get_absolute_url}}/question/{{q.key|urlencode}}?previous={{previous|urlencode}}">{% endif %}
+    {% if not q.is_this_question and q.link %}<a href="{{q.link}}?previous={{previous|urlencode}}">{% endif %}
 
     {% if q.is_this_question  %}<span class="glyphicon glyphicon-play-circle"> </span>
     {% elif q.skipped %}<span class="glyphicon glyphicon-edit"> </span>
@@ -9,6 +9,6 @@
 
     {{q.title}}
 
-    {% if not q.is_this_question and q.can_link %}</a>{% endif %}
+    {% if not q.is_this_question and q.link %}</a>{% endif %}
   </li>
 {% endfor %}
