--- a/templates/question.html
+++ b/templates/question.html
@@ -645,6 +645,7 @@ label:hover .onhover { display: inline; }
         </form>
       </div>
       <div class="modal-footer">
+        <button type="button" class="btn btn-danger" onclick="authoring_tool_delete_question()">Delete Question</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-success" onclick="authoring_tool_save_changes()">Save Changes</button>
       </div>
@@ -1143,6 +1144,24 @@ function authoring_tool_save_changes() {
       keep_indicator_forever: true, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
       success: function(res) {
       	// Modal can stay up until the redirect finishes.
+        window.location = res.redirect;
+      }
+  })
+}
+
+function authoring_tool_delete_question() {
+  if (!confirm("Are you sure you want to delete this question?")) return;
+  ajax_with_indicator({
+      url: "/tasks/_authoring_tool/edit-question",
+      method: "POST",
+      data: {
+        task: {{task.id}},
+        question: "{{q.key|escapejs}}",
+        delete: 1
+      },
+      keep_indicator_forever: true, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
+      success: function(res) {
+        // Modal can stay up until the redirect finishes.
         window.location = res.redirect;
       }
   })
