--- a/templates/project.html
+++ b/templates/project.html
@@ -490,8 +490,14 @@
 
     {% if authoring_tool_enabled %}
     <center style="font-size: 90%;"><p>
-      <a href="#" onclick="authoring_tool_reload_app({{project.root_task.id}}); return false;">
       <span class="glyphicon glyphicon-pencil"></span>
+
+      <a href="#" onclick="authoring_tool_new_question({{project.root_task.id}}, true); return false;" style="margin: 0 1em;">
+      <span class="glyphicon glyphicon-plus"></span>
+      Add Question
+      </a>
+
+      <a href="#" onclick="authoring_tool_reload_app({{project.root_task.id}}); return false;" style="margin: 0 1em;">
       <span class="glyphicon glyphicon-refresh"></span>
       Reload App from {{project.root_task.module.app.source.get_description}}
       </a>
